   is 1 GiB. (#1208)

** Removals

 - The unmaintained GUI applications for Mac OS X and Windows have been
   removed. (#1282)

** Documentation

 - Some documentation updates missed in 1.8.1 have been completed. (#1225)

** Dependency Updates

 - foolscap 0.6.1
 - Debian package dependencies now specify python-twisted-conch
 - setuptools_darcs is bundled rather than being an external dependency


* Release 1.8.1 (2010-10-28)

** Bugfixes and Improvements

 - Allow the repairer to improve the health of a file by uploading
   some shares, even if it cannot achieve the configured happiness
   threshold. This fixes a regression introduced between v1.7.1 and
   v1.8.0. (#1212)
 - Fix a memory leak in the ResponseCache which is used during mutable
   file/directory operations. (#1045)
 - Fix a regression and add a performance improvement in the downloader.
   This issue caused repair to fail in some special cases. (#1223)
 - Fix a bug that caused 'tahoe cp' to fail for a grid-to-grid copy
   involving a non-ASCII filename. (#1224)
 - Fix a rarely-encountered bug involving printing large strings to
   the console on Windows. (#1232)
 - Perform ~ expansion in the --exclude-from filename argument to
   'tahoe backup'. (#1241)
 - The CLI's 'tahoe mv' and 'tahoe ln' commands previously would try
   to use an HTTP proxy if the HTTP_PROXY environment variable was set.
   These now always connect directly to the WAPI, thus avoiding giving
   caps to the HTTP proxy (and also avoiding failures in the case that
   the proxy is failing or requires authentication). (#1253)
 - The CLI now correctly reports failure in the case that 'tahoe mv'
   fails to unlink the file from its old location. (#1255)
 - 'tahoe start' now gives a more positive indication that the node
   has started. (#71)
 - The arguments seen by 'ps' or other tools for node processes are
   now more useful (in particular, they include the path of the