@@ -36,23 +36,16 @@
     <p>Check if you already have an adequate version of Python installed by
     running <cite>python --version</cite>. Python&nbsp;v2.4 (v2.4.4 or
     greater), Python&nbsp;v2.5, Python&nbsp;v2.6, or Python&nbsp;v2.7 will
-    work. Python&nbsp;v3 does not work. If you don't have one of these
-    versions of Python installed, then follow the instructions on
+    work. Python&nbsp;v3 does not work. On Windows, we recommend the use of
+    Python&nbsp;v2.6 (native, not Cygwin).</p>
+
+    <p>If you don't have one of these versions of Python installed, then
+    follow the instructions on
     <a href="http://www.python.org/download/releases/2.6.6/">the Python
     download page</a> to download and install Python&nbsp;v2.6. Make sure
     that the path to the installation directory has no spaces in it (e.g. on
     Windows, do not install Python in the "<tt>Program Files</tt>" directory).
     </p>
-
-    <h4>Windows Caveats</h4>
-
-    <p> On Windows, we recommend the use of Python&nbsp;v2.6 (native, not
-    Cygwin). You must manually install the pywin32 package from
-    <a href="http://sourceforge.net/projects/pywin32/files/">the pywin32
-    site</a> before getting Tahoe-LAFS. Make sure to get the correct file for
-    the version of Python you are using &mdash; e.g. ending in "py2.6.exe"
-    for Python&nbsp;v2.6. If using 64-bit Windows, the file should have
-    "win-amd64" in its name.</p>
 
     <h2>Get Tahoe-LAFS</h2>
 
